unpackaged/main/default/objects/Product2/fields/SBQQ__QuantityScale__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuantityScale__c</fullName>
    <description>Specifies the number of decimal places used in the Quantity field.</description>
    <inlineHelpText>Spécifie le nombre de décimales utilisées dans le champ Quantité.</inlineHelpText>
    <label>Quantity Scale</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>