unpackaged/main/default/objects/Product2/fields/SBQQ__ReconfigurationDisabled__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ReconfigurationDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that disables re-configuration of this product.</description>
    <inlineHelpText>Lorsque cette option est sélectionnée, ce produit peut être configuré uniquement lors de l&#39;ajout initial un devis. Une fois le produit ajouté, les utilisateurs n&#39;ont pas accès à un lien Configurer dans la page Modifier les lignes.</inlineHelpText>
    <label>Disable Reconfiguration</label>
    <type>Checkbox</type>
</CustomField>