unpackaged/main/default/objects/Product2/fields/SBQQ__SubscriptionCategory__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionCategory__c</fullName>
    <description>Subscription category for this product. Applies to all products and used to limit percent of total subscriptions to certain products.</description>
    <inlineHelpText>Utilisez cette option pour limiter les calculs de pourcentage du total de certaines catégories de produits. Par exemple, la maintenance logicielle doit calculer le pourcentage uniquement des produits qui contiennent une Catégorie Pourcentage du total maintenance logicielle.</inlineHelpText>
    <label>Percent Of Total Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>