unpackaged/main/default/objects/Product2/fields/SBQQ__SubscriptionTarget__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Effective product on which maintenance should calculate.</description>
    <inlineHelpText>Utilisez ce champ pour remplacer un produit inclus dans un calcul de pourcentage du total. Pointez cette référence vers un produit avec un prix catalogue que vous souhaitez utiliser pour les calculs de pourcentage de total du produit actuel.</inlineHelpText>
    <label>Percent Of Total Target</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Targeting Products</relationshipLabel>
    <relationshipName>SubscriptionTargetingProducts</relationshipName>
    <type>Lookup</type>
</CustomField>