unpackaged/main/default/objects/Product2/fields/SBQQ__SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionTerm__c</fullName>
    <description>Term length of this subscription. Only applicable if the product is a subscription.</description>
    <inlineHelpText>Saisissez la durée de cet abonnement. Applicable uniquement si le produit est un abonnement.</inlineHelpText>
    <label>Subscription Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>