unpackaged/main/default/objects/Product2/fields/SBQQ__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TaxCode__c</fullName>
    <description>Specifies the tax code for taxation rules.</description>
    <inlineHelpText>Spécifie un code de taxe pour les règles fiscales.</inlineHelpText>
    <label>Tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>