unpackaged/main/default/objects/Product2/fields/SBQQ__TermDiscountLevel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TermDiscountLevel__c</fullName>
    <description>Level of subscription term that&#39;s used to calculated term discount.</description>
    <inlineHelpText>Spécifiez un niveau de durée d&#39;abonnement qui doit être utilisé dans le calcul de la remise sur la durée. Laissez ce champ vide pour spécifier la valeur par défaut.</inlineHelpText>
    <label>Term Discount Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>