unpackaged/main/default/objects/Product2/fields/SBQQ__UpgradeCredit__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeCredit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit product quoted when upgrading this product.</description>
    <inlineHelpText>Utilisez cette option pour spécifier le crédit lors de la génération de devis pour les mises à niveau de ce produit.</inlineHelpText>
    <label>Upgrade Credit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credited Products</relationshipLabel>
    <relationshipName>CreditedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>