unpackaged/main/default/objects/Product2/fields/SBQQ__UpgradeRatio__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeRatio__c</fullName>
    <description>The conversion rate between this upgrade product and its source product.</description>
    <inlineHelpText>Taux de conversion entre la quantité de ce produit et celle de son produit source.</inlineHelpText>
    <label>Upgrade Ratio</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>