unpackaged/main/default/objects/Product2/fields/SBQQ__UpgradeTarget__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product being upgraded to.</description>
    <inlineHelpText>Spécifiez le produit mis à niveau. Applicable uniquement si ce produit est une mise à niveau, qui est indiqué par le champ Source de mise à niveau renseigné ou par des enregistrements Source de mise à niveau associés.</inlineHelpText>
    <label>Upgrade Target</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Source Upgrades</relationshipLabel>
    <relationshipName>SourceUpgrades</relationshipName>
    <type>Lookup</type>
</CustomField>