unpackaged/main/default/objects/Product2/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <label>Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Structure_Type</valueSetName>
    </valueSet>
</CustomField>