unpackaged/main/default/objects/Product2/fields/Tech_Assemblage__c.field-meta.xml
<CustomField>
    <fullName>Tech_Assemblage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Assemblage</label>
    <type>Checkbox</type>
</CustomField>