unpackaged/main/default/objects/Product2/fields/Tech_PO_Price__c.field-meta.xml
<CustomField>
    <fullName>Tech_PO_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Prix à remonter</label>
    <type>Checkbox</type>
</CustomField>