unpackaged/main/default/objects/Product2/fields/Tech_Product_Assemblage_Gamme__c.field-meta.xml
<CustomField>
    <fullName>Tech_Product_Assemblage_Gamme__c</fullName>
    <label>Tech Product Assemblage Gamme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>