unpackaged/main/default/objects/Product2/fields/TechContainer__c.field-meta.xml
<CustomField>
    <fullName>TechContainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechContainer</label>
    <type>Checkbox</type>
</CustomField>