unpackaged/main/default/objects/Product2/fields/TechPricingForfaitShortTerm__c.field-meta.xml
<CustomField>
    <fullName>TechPricingForfaitShortTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechPricingForfaitCourteDurée</label>
    <type>Checkbox</type>
</CustomField>