unpackaged/main/default/objects/Product2/fields/Temp_min__c.field-meta.xml
<CustomField>
    <fullName>Temp_min__c</fullName>
    <label>Temperature min</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperatures</valueSetName>
    </valueSet>
</CustomField>