unpackaged/main/default/objects/Product2/fields/Temperature_Included__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Included__c</fullName>
    <label>Temperature Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperatures</valueSetName>
    </valueSet>
</CustomField>