unpackaged/main/default/objects/Product2/fields/Type_de_Location__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Location__c</fullName>
    <label>Type de Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Location</valueSetName>
    </valueSet>
</CustomField>