unpackaged/main/default/objects/Product2/fields/Unite_CD__c.field-meta.xml
<CustomField>
    <fullName>Unite_CD__c</fullName>
    <label>Unité CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Journalier</fullName>
            </value>
            <value>
                <fullName>Forfait</fullName>
            </value>
            <value>
                <fullName>Inclus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>