unpackaged/main/default/objects/Product2/fields/Valeur_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Valeur_Assurance__c</fullName>
    <label>Valeur d&#39;Assurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>