unpackaged/main/default/objects/Product2/recordTypes/Containers.recordType-meta.xml
<RecordType>
    <fullName>Containers</fullName>
    <active>true</active>
    <label>Containers</label>
</RecordType>