unpackaged/main/default/objects/Product2/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>true</active>
    <label>Véhicule</label>
</RecordType>