unpackaged/main/default/objects/Product2/listViews/All_products.listView-meta.xml
<ListView>
    <fullName>All_products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>SAP</value>
    </filters>
    <label>All products</label>
</ListView>