unpackaged/main/default/objects/Product2/listViews/Options_Containers.listView-meta.xml
<ListView>
    <fullName>Options_Containers</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Containers</value>
    </filters>
    <filters>
        <field>Gamme__c</field>
        <operation>equals</operation>
        <value>Option</value>
    </filters>
    <label>Containers - Options</label>
</ListView>