unpackaged/main/default/objects/Product2/listViews/Produits_Containers_Assemblage.listView-meta.xml
<ListView>
    <fullName>Produits_Containers_Assemblage</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gamme__c</field>
        <operation>equals</operation>
        <value>Maxi-Special</value>
    </filters>
    <label>Containers - Produits Assemblage</label>
</ListView>